# talk

./: .envrc  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Future.md  HANDOFF.md  LSP_FEATURES.md  Modules2.md  POST_COMPILATION_TODO.md  Package.swift  ROW_REFACTOR_PLAN.md  ROW_REFACTOR_STATUS.md  TYPE_STORAGE_PLAN.md  bigdiff.md  build.rs  example.tlk  hello.wat  installer.sh  latest  notes.txt  releasor2000.toml  ssa-paper.md  test.tlk  test_array_simple.rs  types-trace-test.html  types.html
.cargo/: config.toml
.playwright-mcp/: page-2026-04-19T19-27-13-613Z.yml  page-2026-04-19T19-31-59-575Z.yml
009d2cbc2a187805069646d982badb8bd5f9400d/: libtalk_static-aarch64-unknown-linux-gnu.a.sha256
0c8e3b06711fc31f2ae924329bb87975b3e383b1/: libtalk_static-aarch64-apple-darwin.a.sha256  libtalk_static-aarch64-unknown-linux-gnu.a.sha256  libtalk_static-x86_64-unknown-linux-gnu.a.sha256
0d6f031dc3482bc4b03be7aed6ac69846d45a4c9/: libtalk_static-x86_64-unknown-linux-gnu.a.sha256
1f8c90d6b447009e96912cf9282f3f29e498462a/: libtalk_static-aarch64-apple-darwin.a.sha256  libtalk_static-aarch64-unknown-linux-gnu.a.sha256  libtalk_static-x86_64-unknown-linux-gnu.a.sha256
22bc73cfea94a51e0d9432e6ab05bed24764aadc/: libtalk_static-aarch64-unknown-linux-gnu.a.sha256
30ba6d44fcabdb9b1aae0d751b5e4361dac06d59/: talk-c-aarch64-apple-ios-sim.tar.gz.sha256  talk-c-aarch64-apple-ios.tar.gz.sha256
3241d59be9851bf2d452fff0a0f86b22816396f1/: libtalk_static-aarch64-unknown-linux-gnu.a.sha256
4e24fc5c98ec123bf2528c820b183d795dcf18a8/: libtalk_static-aarch64-apple-darwin.a.sha256  libtalk_static-aarch64-unknown-linux-gnu.a.sha256  libtalk_static-x86_64-unknown-linux-gnu.a.sha256
4f71ccbb579f32d323666b792e18526a36044bf3/: libtalk_static-aarch64-unknown-linux-gnu.a.sha256
57171cd717c89ca4ae5b60fbe6a909bb7a7658e6/: libtalk_static-aarch64-apple-darwin.a.sha256  libtalk_static-x86_64-unknown-linux-gnu.a.sha256
5f3e884f3becc46dcf552d3e6acbeccb5af9210b/: libtalk_static-aarch64-apple-darwin.a.sha256  libtalk_static-aarch64-unknown-linux-gnu.a.sha256  libtalk_static-x86_64-unknown-linux-gnu.a.sha256
6bdfc2b78b353898d6b71d452f876e491cb6d16e/: libtalk_static-aarch64-apple-darwin.a.sha256
6c5fc1331879c439c99fe2883071483343463e6f/: libtalk_static-aarch64-apple-darwin.a.sha256  libtalk_static-x86_64-unknown-linux-gnu.a.sha256
6c6b9b7f3d0322f24812b776108b3d71231e230c/: libtalk_static-x86_64-unknown-linux-gnu.a.sha256
73d7179f6f06c8d12a24e1b24f3459cc7bef48b6/: libtalk_static-aarch64-apple-darwin.a.sha256  libtalk_static-aarch64-unknown-linux-gnu.a.sha256  libtalk_static-x86_64-unknown-linux-gnu.a.sha256
85f439295428e9341eeacc043fac17dd533cad61/: libtalk_static-aarch64-apple-darwin.a.sha256  libtalk_static-aarch64-unknown-linux-gnu.a.sha256
895a7eb53b691cc37a7281cd558bc2bf651520bf/: libtalk_static-x86_64-unknown-linux-gnu.a.sha256
904a15d058be88e027eb974b4248499200aa955a/: libtalk_static-aarch64-apple-darwin.a.sha256
9c03423d88df1c104fb0156b0c533da1f2f67446/: libtalk_static-aarch64-unknown-linux-gnu.a.sha256
a288502403dad0ae4556509a838e25a5906b8f8e/: libtalk_static-x86_64-unknown-linux-gnu.a.sha256
b0eb66f794a1e926823d3c5bbd9efe7c2eb31cba/: libtalk_static-aarch64-apple-darwin.a.sha256  libtalk_static-x86_64-unknown-linux-gnu.a.sha256
bench/: README.md  arith.tlk  arrays.tlk  calls.tlk  dispatch.tlk  drops.tlk  effects.tlk  fields.tlk  strings.tlk
benches/: README.md  compiler.rs  iai.rs  interpreter.rs  interpreter.rs.txt  vm_e2e.rs
c86f02ba81af4a891cad102432e2edfef5d764a1/: libtalk_static-aarch64-apple-darwin.a.sha256
commit-reviews/: 001-fc4696b1-big-diff.md  002-d7943b78-move-fuzz-tests.md  003-eb22cb0c-lol.md  004-96249e71-fix-never-valued-match-arm-lowering.md  005-a1d20d27-reset-compiler-to-frontend-only.md  006-f2b1d759-stabilize-typedprogram-semantic-seam.md  007-5f70a6f2-stage-0-checkpoint.md  008-7b876a65-lower-copy-only-mir-to-talk-ir.md  009-bdb74959-generate-verified-copy-only-mir-cfgs.md  010-fad56b6a-test-typed-to-talk-ir-copy-handshake.md  011-4c541321-track-backend-implementation-and-contract-gaps.md  012-761a7994-close-callable-copy-and-ownership-contract-gaps.md  013-74b9fc9e-cleanup.md  014-7ecba6b3-lower-verified-mir-forms-to-talk-ir.md  015-1e22b4c7-fix-talk-ir-close-entry-and-indirect-call-gaps.md  016-dbf5187a-add-narrow-affine-mir-ownership-checking.md  017-266ba155-fix-mir-close-affine-ownership-verifier-gaps.md  018-4ac8368e-fix-mir-close-ownership-state-bypasses.md  019-b73ad318-test-ir-align-lowering-fixtures-with-checked-mir-cleanup.md  020-14691b54-docs-add-cross-artifact-integration-laws.md  021-a1a0ba90-implement-canonical-typedprogram-types-lane.md  022-fc289263-close-canonical-callable-and-copy-evidence-seam.md  023-1fb9946b-fix-typed-program-review-blockers.md  024-a364a34b-complete-typed-program-integration-laws.md  025-4f890f2c-enforce-semantic-occurrence-completeness.md  026-d84fe589-align-occurrence-lookup-and-initializer-completeness.md  027-03128941-validate-exact-initializer-ownership.md  028-48f2956b-docs-mark-typed-program-cutover-integrated.md  029-8e79d3fe-docs-add-backend-feature-parity-roadmap.md  030-1ccb324c-test-freeze-backend-parity-corpus-oracles.md  031-8fb25e57-docs-disposition-archived-backend-tests.md  032-f74b9ae6-docs-specify-e1-scalar-execution-slice.md  033-536e3efb-compiler-add-target-neutral-scalar-intrinsics.md  034-e179fb70-frontend-canonicalize-scalar-inline-ir.md  035-bca268e7-frontend-publish-scalar-intrinsic-copy-evidence.md  036-b7dc18fb-mir-generate-and-verify-scalar-intrinsics.md  037-3f36db1f-talk-ir-lower-and-verify-scalar-intrinsics.md  038-9ba7c06a-frontend-validate-signed-integer-literals.md  039-872ba1ea-runtime-validate-fail-closed-scalar-bytecode.md  040-5409bf41-bytecode-execute-verified-scalar-talk-ir.md  (+106 more)
core/: 3_Array.tlk  4_String.tlk  (+40 more)
talk-ex/: .gitignore  Cargo.toml  build.rs  gen.sh
talk-ex/src/: bindings.rs  console.rs  io.rs  lib.rs
talk-ex/tests/: wit.rs
talk-ex/wit/: host.wit
wasm/: Cargo.toml  README.md  SLOP  index.html  package.json
wasm/js/: index.js
wasm/src/: lib.rs
(+1140 files in other folders)
