[package]
name = "talk"
version = "0.1.0"
edition = "2024"

[build-dependencies]
quote = "1.0.40"
regex = "1.11.1"
syn = { version = "1", features = ["extra-traits", "full"] }
proc-macro2 = "1"

[dev-dependencies]
ctor = "0.4.2"
indoc = "2.0.6"
prettydiff = "0.8.0"

[dependencies]
clap = { version = "4.5.39", features = ["derive"], optional = true }
lazy_static = "1.5.0"
env_logger = "0.11.8"
#ir-macro = { path = "./ir-macro" }
regex = "1"
once_cell = "1.21.3"
async-lsp = { version = "0.2.2", optional = true, features = [
  "async-io",
  "tokio",
] }
futures = { version = "0.3.31", optional = true }
tower = { version = "0.5.2", optional = true }
tokio = { version = "1.45.1", features = [
  "macros",
  "io-util",
  "rt-multi-thread",
  "time",
] }
typed-arena = "2.0.2"
itertools = "0.14.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
ena = "0.14.3"
tracing-tree = "0.4.0"


[features]
default = ["cli"]
cli = ["dep:clap", "dep:async-lsp", "dep:futures", "dep:tower"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
debug = false

[lints.clippy]
approx_constant = "allow"
