[workspace]
members = [".", "wasm", "www"]
default-members = ["."]
resolver = "2"

[package]
name = "talk"
version = "0.1.0"
edition = "2024"

[build-dependencies]
quote = "1.0.40"
regex = "1.11.1"
syn = { version = "1", features = ["extra-traits", "full"] }
proc-macro2 = "1"
cargo-witgen = "0.15.0"

[dev-dependencies]
ctor = "0.4.2"
indoc = "2.0.6"
prettydiff = "0.8.0"
criterion = { version = "0.6", features = ["html_reports"] }
color-eyre = "0.6"

[dependencies]
clap = { version = "4.5.39", features = ["derive"], optional = true }
clap_complete = { version = "4.5.39", optional = true }
lazy_static = "1.5.0"
env_logger = "0.11.8"
regex = "1"
once_cell = "1.21.3"
async-lsp = { version = "0.2.2", optional = true, features = [
  "async-io",
  "tokio",
] }
futures = { version = "0.3.31", optional = true }
tower = { version = "0.5.2", optional = true }
tokio = { version = "1.45.1", optional = true, features = [
  "macros",
  "io-util",
  "rt-multi-thread",
  "time",
] }
itertools = "0.14.0"
indexmap = "2.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing-tree = "0.4.0"
miette = { version = "7.6.0", features = ["fancy"] }
anyhow = "1.0.99"
rustc-hash = "2.1.1"
generational-arena = "0.2.9"
derive-visitor = "0.4.0"
smallvec = "1.15.1"
petgraph = "0.8.2"
sscanf = "0.4.3"
priority-queue = "2.7.0"
ena = "0.14.3"
petgraph-graphml = "5.0.0"
sha2 = "0.10.9"
ignore = { version = "0.4", optional = true }

[features]
default = ["cli"]
cli = [
  "dep:clap",
  "dep:clap_complete",
  "dep:async-lsp",
  "dep:futures",
  "dep:tower",
  "dep:tokio",
  "dep:ignore",
]
wasm = []
verify_ir = []
metrics = []

[profile.release]
strip = true  # Automatically strip symbols from the binary.
debug = false
#opt-level=1

[lints.clippy]
approx_constant = "allow"

# [[bench]]
# name = "interpreter"
# harness = false

# [[bench]]
# name = "compiler"
# harness = false
