[workspace]
members = [".", "wasm", "www", "talk-runtime", "talk-static", "talk-c"]
default-members = ["."]
resolver = "2"

[package]
name = "talk"
version = "0.1.62"
edition = "2024"
default-run = "talk"

[dev-dependencies]
ctor = "0.4.2"
prettydiff = "0.8.0"
color-eyre = "0.6"
criterion = "0.8.2"

[dependencies]
clap = { version = "4.5.39", features = ["derive"], optional = true }
clap_complete = { version = "4.5.39", optional = true }
rustyline = { version = "18.0.0", optional = true }
async-lsp = { version = "0.2.2", optional = true, features = [
  "async-io",
  "tokio",
] }
futures = { version = "0.3.31", optional = true }
tower = { version = "0.5.2", optional = true }
tokio = { version = "1.45.1", optional = true, features = [
  "macros",
  "io-util",
  "rt-multi-thread",
  "time",
] }
itertools = "0.14.0"
indexmap = { version = "2.2", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing-tree = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
miette = { version = "7.6.0", features = ["fancy"] }
anyhow = "1.0.99"
rustc-hash = "2.1.1"
generational-arena = "0.2.9"
derive-visitor = "0.4.0"
petgraph = "0.8.2"
sha2 = "0.10.9"
flate2 = "1.1.5"
tar = { version = "0.4.44", default-features = false }
ignore = { version = "0.4", optional = true }
talk-runtime = { path = "talk-runtime" }

# POSIX io (StdioIO's file and socket operations); wasm builds use the
# non-unix stubs in src/vm/io.rs instead.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[bench]]
name = "vm_e2e"
harness = false

[features]
default = ["cli"]
cli = [
  "dep:clap",
  "dep:clap_complete",
  "dep:rustyline",
  "dep:async-lsp",
  "dep:futures",
  "dep:tower",
  "dep:tokio",
  "dep:ignore",
]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
debug = true
#opt-level=1

[lints.clippy]
approx_constant = "allow"
