[package]
name = "talk-ex"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
talk = { path = "..", default-features = false, features = ["wasm"] }
js-sys = "0.3.77"
console_error_panic_hook = "0.1.7"
witgen = "0.15.0"

[build-dependencies]
cargo-witgen = "0.15.0"
