[package]
name = "talk-ex"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
talk = { path = "..", default-features = false, features = ["wasm"] }
js-sys = "0.3.77"
console_error_panic_hook = "0.1.7"
wit-bindgen-rt = { version = "0.43.0", features = ["bitflags"] }
wit-bindgen = "0.43.0"
lazy_static = "1.5.0"

[package.metadata.component]
package = "talkex:host"

[profile.release]
panic = "abort"
